# Passwordless-Auth-Rust

./: .env.example  .pre-commit-config.yaml  .wiki-summary.txt  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  PRODUCTION_ENHANCEMENTS.md  README.md  TRANSFORMATION_SUMMARY.md  WIKI.md  config.toml  docker-compose.yml  index.html  openapi.yaml
.cargo/: config.toml
.github/: CONTRIBUTING.md  SECURITY.md
axum/: errors.rs  extractors.rs  handlers.rs  mod.rs
client/: example.js
example/: PasswordlessAuthClient.cs
migrations/: 002_email_queue.sql  003_production_features.sql  init.sql
scripts/: clippy.toml  format.sh  request_magic.sh  rustfmt.toml  start.sh  test.sh  verify_magic.sh
src/: admin.rs  audit.rs  config.rs  db.rs  email.rs  email_queue.rs  email_templates.rs  email_worker.rs  error.rs  jwt.rs  magic_link.rs  main.rs  metrics.rs  middleware.rs  models.rs  rate_limit.rs  routes.rs  session.rs  totp.rs  webauthn.rs  webhooks.rs
tests/: integration_test.rs  unit_tests.rs
tools/: jwt_verify.c  totp_tool.c
