[package]
name = "passwordless-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["headers", "json"] }
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.17"
uuid = { version = "1.4", features = ["v4"] }
rusqlite = { version = "0.29", features = ["bundled"] }
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base32 = "0.4"
oath = "0.16"
webauthn-rs = "0.8"
lettre = { version = "0.11", features = ["builder", "smtp-transport", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing_subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
data-encoding = "2.3"
